add skill cmd + lsteam cmd refactor